--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -32,13 +32,18 @@
 <!-- header ends here -->
 
 <div class="container py-md-5">
-
+  <% errors.forEach(function(message){ %>
+    <div class="alert alert-danger text-center"><%= message %></div>
+    <%}) %>
   <div class="row align-items-center">
     <div class="col-lg-7 py-3 py-md-5">
       <h1 class="display-3">Remember Writing?</h1>      
       <p class="lead text-muted">Are you sick of short tweets and impersonal &ldquo;shared&rdquo; posts that are reminiscent of the late 90&rsquo;s email forwards? We believe getting back to actually writing is the key to enjoying the internet again.</p>
     </div>
     <div class="col-lg-5 pl-lg-5 pb-3 py-lg-5">
+      <% regErrors.forEach(function(message){ %>
+        <div class="alert alert-danger text-center"><%= message %></div>
+        <%}) %>
       <form action="/register" method="POST" id="registration-form">
 
           <div class="form-group">
