--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -23,11 +23,13 @@
         <a href="/profile/<%= user.username %>" class="mr-2"><img src="<%= user.avatar %>" title="My Profile" data-toggle="tooltip" data-placement="bottom" style="width: 32px; height: 32px; border-radius: 16px;"></a>
         <a class="btn btn-sm btn-success mr-2" href="/create-post">Create Post</a>
         <form action="/logout" method="POST" class="d-inline">
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <button class="btn btn-sm btn-secondary">Sign Out</button>
         </form>
       </div>
       <% } else { %>
       <form action="/login" method="POST" class="mb-0 pt-2 pt-md-0">
+        
         <div class="row align-items-center">
           <div class="col-md mr-0 pr-md-0 mb-3 mb-md-0">
             <input name="username" class="form-control form-control-sm input-dark" type="text" placeholder="Username" autocomplete="off">
@@ -36,6 +38,7 @@
             <input name="password" class="form-control form-control-sm input-dark" type="password" placeholder="Password">
           </div>
           <div class="col-md-auto">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn btn-primary btn-sm">Sign In</button>
           </div>
         </div>
